Works for both .21.1 and .21.4